Rename project files

--- a/SDLSnake/SDLSnake.vcxproj
+++ b/SDLSnake/SDLSnake.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{069940FE-4F1A-40E6-BCC5-4EF28B4ACAEF}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>SDLSnake</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
