--- a/SDLSnake/SDLSnake.vcxproj
+++ b/SDLSnake/SDLSnake.vcxproj
@@ -120,6 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Snake.cpp" />
     <ClCompile Include="SnakeGame.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -127,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="Snake.h" />
     <ClInclude Include="SnakeGame.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Tile.h" />
